Make sidebar sticky to prevent overlap with fixed navigation
Added sticky positioning to the sidebar so the avatar and author information stay fixed below the navigation menu when scrolling, preventing content from being hidden.

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -18,6 +18,10 @@
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 80px;
+    align-self: flex-start;
 
     &:hover {
       opacity: 1;
